fix: changed gaps between elements in FiltersBar

--- a/src/pages/Home/FiltersBar/Filters/Filters.module.scss
+++ b/src/pages/Home/FiltersBar/Filters/Filters.module.scss
@@ -2,4 +2,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  .progressStatus,
+  .deadline {
+    margin: 20px 0;
+  }
 }
